# mdeditor

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  vite.config.js
.github/workflows/: deploy-pages.yml
docs/: readme.md
docs/superpowers/plans/: 2026-06-15-markdown-editor.md  2026-06-16-precise-scroll-sync.md  2026-06-17-export-html-pdf.md
docs/superpowers/specs/: 2026-06-15-markdown-editor-design.md  2026-06-16-precise-scroll-sync-design.md  2026-06-17-export-design.md
scripts/: make-icon.cjs
src/: editor.js  editor.test.js  export-styles.js  export.css  exporter.js  exporter.test.js  files.js  files.test.js  main.js  mermaid.js  renderer.js  renderer.test.js  scrollsync.js  scrollsync.test.js  storage.js  storage.test.js  style.css  test-setup.js
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
