[package]
name = "app"
version = "0.1.0"
description = "mdeditor"
authors = ["you"]
edition = "2021"
rust-version = "1.77.2"

# Lib crate name is package-name + "_lib" => "app_lib"; main.rs calls app_lib::run().
[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
tauri = { version = "2.11.2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
